more tab files, FIX: suggested songs/exercises